--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,14 +1,20 @@
 .header{
-    height: 36px;
+    height: 60px;
     background-color: #263238;
     width: 100%;
-    padding-top: 10px;
 }
 .logo{
-   
+    display: inline-flex;
     color: #fff;
-    padding-left: 10px;
+    padding: 13px 0 13px 10px;
+     align-content: center;
+    justify-content: center;
     font-size: 18px;
-    align-content: center;
-
 }  
+.searchBar{
+    display: inline-block;
+    position:relative;
+    float:right;
+    margin: 12.5px 10px 12.5px 0px;
+    
+}
