--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,3 +1,17 @@
 .GridContainer{
-    padding: 10px 20px 10px 20px;
+    padding: 10px 30px 0px 30px;
+}
+.caption{
+    font-weight:700;
+}
+.likes {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+}
+.red{
+    background-color: red;
+}
+.white{
+    background-color: white;
 }
