--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -18,3 +18,11 @@
     margin: 12.5px 10px 12.5px 0px;
     
 }
+.avatarHeader{
+    margin: 10px 8.5px;
+}
+.header-right{
+    display: inline-flex;
+    flex-direction: row;
+    float: right;
+}
