--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -14,3 +14,28 @@
 .imagePosts{
     margin: 0 125px;
 }
+.edit-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .4rem;
+}
+
+/* For Name Change helper text. ('required') */
+.hide {
+    display: none;
+}
+
+/* For Name Change helper text. ('required') */
+.show {
+    display: block;
+}
+
+/* Image placed on the grid should be clickable. */
+.image-on-grid{
+    cursor: pointer;
+}
