--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -25,6 +25,19 @@
     border-radius: .4rem;
 }
 
+.image-details-modal{
+height: 300px;
+width: 730px;
+position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .4rem;
+}
+
 /* For Name Change helper text. ('required') */
 .hide {
     display: none;
