--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -13,8 +13,7 @@
 }  
 .searchBar{    
     float:right;
-    margin: 12.5px 10px 12.5px 0px;
-    
+    margin: 12.5px 10px 12.5px 0px;  
 }
 .avatarHeader{
    
@@ -32,8 +31,7 @@
 .MuiIconButton-root {
     max-height: 60px;
 }
-.Header-avatar-button
-{
+.Header-avatar-button{
     max-height: 60px;
 }
 
